--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,13 @@
 -- todo --
-add a makeVPK function
-makeVPK function should return a modified VPK class that you can write things to
+- add a makeVPK function
+- makeVPK function should return a modified VPK class that you can write things to
 
 -- in progress --
 - learn what FileReader.js is doing
 
 -- finished --
+
+
+-- extra --
+
+- may need help understanding how https://github.com/ValvePython/vpk/ works, especially with the writing a vpk.
